--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html>
 
 <head>
+  <link href ="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <title> Kelar's Portfolio </title>
 </head>
 <body>
+  <div class="intro">
+    <div class="my-class">
   <h1> The Life of Kelar </h1>
-
+</div>
   <img class="img1" src="img/kelar.jpeg" alt="picture of kelar">
+</div>
 <h2> Here are some of the projects i've completed in my time here at Epicodus!</h2>
-
   <ul>
     <li><a href= "https://github.com/epicoding95/vacation">Vacation Project</a>
     This Vacation project was created using HTML formatting and styled with a grid system supplied by a bootstrap.
@@ -26,9 +29,11 @@
       contact info,pictures, and travel arrangement options.
     </ul>
 
-      <h1> About Me </h1>
+      <h2> <span class="important">About Me </span></h2>
 
-      <p> Hello! My names Kelar Crisp im 23 years old and i'm from Knoxville TN. I graduated from Halls High School in 2014 and since then
+
+      <div class ="my-class">
+      <p><strong>Hello! My names Kelar Crisp im 23 years old and i'm from Knoxville TN</strong>. I graduated from Halls High School in 2014 and since then
         I've spent most of my adult life working for UPS as an outbound supervisor, which consisted of making daily plans to direct my 10 man crew to fulfil that days objectives.
         Typically in a day we would process anywhere between 8,000-10,000 packages. Since leaving UPS in may of this year i've moved to Seattle,Washington
         to begin my career in the tech industry. Since moving to Seattle just a short couple of weeks ago, i've enrolled into a computer programming class called Epicodus!
@@ -36,7 +41,7 @@
         to compete and finish a marathon before the end of this year!
       </p>
 
-
+      </div>
 
 </body>
 </html>
