update README and styling

--- a/index.html
+++ b/index.html
@@ -1,47 +1,80 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <link href ="css/bootstrap.css" rel="stylesheet" type="text/css">
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <title> Kelar's Portfolio </title>
-</head>
-<body>
-  <div class="intro">
-    <div class="my-class">
-  <h1> The Life of Kelar </h1>
-</div>
-  <img class="img1" src="img/kelar.jpeg" alt="picture of kelar">
-</div>
-<h2> Here are some of the projects i've completed in my time here at Epicodus!</h2>
-  <ul>
-    <li><a href= "https://github.com/epicoding95/vacation">Vacation Project</a>
-    This Vacation project was created using HTML formatting and styled with a grid system supplied by a bootstrap.
-    <li><a href= "https://github.com/epicoding95/animal-shelter">Animal Shelter Project</a>
-      The Animal Shelter Project was completed using HTML formatting and styled with the box model which consisted of
-      a border,padding,margin, and a background.
-    <li><a href= "https://github.com/epicoding95/cupcake">Cupcake Project</a>
-      The cupcake project was simply made with HTML and with the help of a bootstrap.
-    <li><a href= "https://github.com/epicoding95/new-page">New-Page project</a>
-      The new page project was made with HTML and was my first try using styling and classes.
-    <li><a href= "https://github.com/epicoding95/private-island-resort">Private Island Resort Project</a>
-      the Private Island Webpage was created with HTML and styled with a grid containing accomadations,activities,
-      contact info,pictures, and travel arrangement options.
-    </ul>
+  <head>
+    <meta charset="utf-8">
+    <link href ="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
 
-      <h2> <span class="important">About Me </span></h2>
+    <title> Kelar's Portfolio </title>
+  </head>
+
+  <body>
 
 
-      <div class ="my-class">
-      <p><strong>Hello! My names Kelar Crisp im 23 years old and i'm from Knoxville TN</strong>. I graduated from Halls High School in 2014 and since then
-        I've spent most of my adult life working for UPS as an outbound supervisor, which consisted of making daily plans to direct my 10 man crew to fulfil that days objectives.
-        Typically in a day we would process anywhere between 8,000-10,000 packages. Since leaving UPS in may of this year i've moved to Seattle,Washington
-        to begin my career in the tech industry. Since moving to Seattle just a short couple of weeks ago, i've enrolled into a computer programming class called Epicodus!
-        Outside of work/school i enjoy almost all outdoor activities, such as hiking,swimming,fishing, and even just going for long runs. As of right now my goal is
-        to compete and finish a marathon before the end of this year!
-      </p>
+    <div container="color">
+        <div class="slider">
+        <div class="intro">
+        <div class="border-bar">
+          <h1> The Life of Kelar Crisp </h1>
+
+      </div>
+      <img class="img1" src="img/kelar.jpeg" alt="picture of kelar">
+    </div>
+    <div class="spacing">
+
+    <h2> <span class="important">Here are some of the projects i've completed in my time here at Epicodus!</h2>
+    </div>
+    <ol>
+      <li class="bg-success"><a href= "https://github.com/epicoding95/vacation">Vacation Project</a>
+      This Vacation project was created using HTML formatting and styled with a grid system supplied by a bootstrap.
+      <li><a href= "https://github.com/epicoding95/animal-shelter">Animal Shelter Project</a>
+        The Animal Shelter Project was completed using HTML formatting and styled with the box model which consisted of
+        a border,padding,margin, and a background.
+      <li><a href= "https://github.com/epicoding95/cupcake">Cupcake Project</a>
+        The cupcake project was simply made with HTML and with the help of a bootstrap.
+      <li><a href= "https://github.com/epicoding95/new-page">New-Page project</a>
+        The new page project was made with HTML and was my first try using styling and classes.
+      <li><a href= "https://github.com/epicoding95/private-island-resort">Private Island Resort Project</a>
+        the Private Island Webpage was created with HTML and styled with a grid containing accomadations,activities,
+        contact info,pictures, and travel arrangement options.
+    </ol>
+        <div class="spacing">
+        <h2> <span class="important">About Me </span></h2>
+      </div>
+    
+      <div class ="border-bar">
+        <p><strong>Hello! My names Kelar Crisp im 23 years old and i'm from Knoxville TN</strong>. I graduated from Halls High School in 2014 and since then
+          I've spent most of my adult life working for UPS as an outbound supervisor, which consisted of making daily plans to direct my 10 man crew to fulfil that days objectives.
+          Typically in a day we would process anywhere between 8,000-10,000 packages. Since leaving UPS in may of this year i've moved to Seattle,Washington
+          to begin my career in the tech industry. Since moving to Seattle just a short couple of weeks ago, i've enrolled into a computer programming class called Epicodus!
+          Outside of work/school i enjoy almost all outdoor activities such as:
+
+          <ul>
+            <li>hiking</li>
+            <li>swimming</li>
+            <li>fishing</li>
+            <li>basketball</li>
+            <li>long runs</li>
+          </ul>
 
       </div>
 
-</body>
+      <div class="border-bar">
+          I also love traveling as much as i possibly can, my four favorite places i've been to so far are
+          New York City,Sydney,Miami and Seattle!
+          <div class="spacing">
+          <img class="img2" src="img/newyorkcity.jpeg" alt ="picture of New York City">
+          <img class="img3" src="img/sydney.jpeg" alt="picture of Sydney,Australia">
+          <img class="img4" src="img/miami.jpeg" alt="picture of Miami Floida">
+          <img class="img5"src="img/seattle5.jpeg" alt-"picture of seattle">
+        </div>
+      </div>
+
+
+        </p>
+
+    </div>
+  </div>
+  </body>
 </html>
